# scholarspend-ai

./: .env.example  .gitignore  .railwayignore  ACTION_PLAN.md  ANALYTICS_IMPLEMENTATION.md  ARCHITECTURE.md  BUILD_FIX_RENDER.md  COMPREHENSIVE_PRE_DEPLOYMENT_CHECK.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIXED.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_READY.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_STATUS.txt  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  DOCKER_TO_PYTHON.md  DOCS_INDEX.md  IMPLEMENTATION_SUMMARY.md  PLATFORM_COMPARISON.md  QUICK_DEPLOY.md  QUICK_FIX_RENDER.md  QUICK_REFERENCE.md  RAILWAY_SETUP.md  README.md  RENDER_DEPLOYMENT_FINAL.md  RENDER_DEPLOY_NOW.md  RENDER_MANUAL_FIX.md  RENDER_READY.md  RENDER_SETUP.md  START_HERE.md  SYSTEM_AUDIT_REPORT.md  TROUBLESHOOTING_COMPLETE.md  USE_RENDER.md  build.sh  docker-compose.yml  pyproject.toml  railway.json  railway.toml  (+2 more)
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  crud.py  database.py  forecaster.py  main.py  models.py  schemas.py  sms_parser.py
backend/app/routers/: __init__.py  analytics.py  dues.py  subscriptions.py  transactions.py  users.py
flutter_app/: README.md  pubspec.yaml
flutter_app/android/: build.gradle.kts
flutter_app/android/app/: build.gradle.kts
flutter_app/lib/: main.dart
flutter_app/lib/models/: analytics.dart  analytics_summary.dart  due.dart  forecast.dart  transaction.dart
flutter_app/lib/screens/: dues_screen.dart  (+7 more)
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
nginx/: nginx.conf
(+12 files in other folders)
