[project]
name = "scholarspend-ai"
version = "1.0.0"
description = "Financial stability tool for students"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.111.0"
uvicorn = {extras = ["standard"], version = "0.29.0"}
sqlalchemy = "2.0.30"
asyncpg = "0.29.0"
pydantic = {extras = ["email"], version = "2.7.1"}
